--- a/restaurant.html
+++ b/restaurant.html
@@ -54,61 +54,61 @@
       <div class="row">
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Сельдь на бородинском хлебе</h3>
               <div class="card__description">С яйцом и огурцом</div>
               <div class="card__price">240 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/1.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Соленья ассорти</h3>
               <div class="card__description"></div>
               <div class="card__price">320 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/2.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Грибы маринованные</h3>
               <div class="card__description"></div>
               <div class="card__price">300 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/3.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Сало домашнее с горчицей</h3>
               <div class="card__description"></div>
               <div class="card__price">320 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/4.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Малосольная семга</h3>
               <div class="card__description"></div>
               <div class="card__price">390 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/5.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
         <div class="col-xl-6 col-md-12 col-xs-12">
           <div class="card"><!-- card -->
-            <div class="card__inner">
+            <a href="#" class="card__inner">
               <h3 class="card__title">Язык говяжий с хреном</h3>
               <div class="card__description"></div>
               <div class="card__price">350 ₽</div>
-            </div>
+            </a>
             <img src="./images/restaurants/6.png" alt="" class="card__image">
           </div><!-- /.card -->
         </div>
